[gd_scene load_steps=10 format=3 uid="uid://c1sx32kth144p"]

[ext_resource type="Script" path="res://Niveles/ControlDialogue.gd" id="1_lsvsd"]
[ext_resource type="Texture2D" uid="uid://in4e67lblewe" path="res://Dialogos/bgdialog.png" id="2_wldxt"]
[ext_resource type="FontFile" uid="uid://cppv0pgxwifhi" path="res://Assets/font/NicoFontPack-v1.0/Base Font Files/NicoClean/NicoClean-Monospaced.ttf" id="3_nof68"]
[ext_resource type="Texture2D" uid="uid://buyyh1gg0bo6l" path="res://Assets/Intro/IconoNext.png" id="4_k8tvd"]
[ext_resource type="AudioStream" uid="uid://diq3vo4t6of6p" path="res://Assets/Audio/Blip/sound (1).wav" id="5_qrirr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m13wh"]
content_margin_left = 12.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 20.0

[sub_resource type="Animation" id="Animation_fmfqm"]
resource_name = "Next"
length = 0.5
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(325, 45), Vector2(325, 43)]
}

[sub_resource type="Animation" id="Animation_qtt3f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(174, 45)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m6008"]
_data = {
"Next": SubResource("Animation_fmfqm"),
"RESET": SubResource("Animation_qtt3f")
}

[node name="ControlDialog" type="Control"]
layout_mode = 3
anchor_left = 0.505
anchor_top = 1.0
anchor_right = 0.505
anchor_bottom = 1.0
offset_left = -186.13
offset_top = -68.0
offset_right = 185.87
offset_bottom = -5.0
script = ExtResource("1_lsvsd")
metadata/_edit_group_ = true

[node name="TextureRectDialog" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_wldxt")
expand_mode = 2

[node name="RichTextLabelDialog" type="RichTextLabel" parent="."]
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("3_nof68")
theme_override_font_sizes/normal_font_size = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_m13wh")

[node name="TextureRectNext" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 174.0
offset_top = 45.0
offset_right = 258.0
offset_bottom = 122.0
scale = Vector2(0.15, 0.15)
texture = ExtResource("4_k8tvd")
expand_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextureRectNext"]
autoplay = "Next"
libraries = {
"": SubResource("AnimationLibrary_m6008")
}

[node name="AudioStreamPlayerConfirm" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_qrirr")
bus = &"SFX"
